# XtraLedger

./: .gitignore  CMakeLists.txt
.claude/: CLAUDE.md  HANDOFF.md  LEARNING_PLAN.md
.claude/feedback/: 01-07-2026.md  24-06-2026.md  25-06-2026.md
.claude/homework/17-07-2026/: QUESTIONS.md
.claude/homework/20-06-2026/: QUESTIONS.md
.claude/journal/: 06-07-2026.md  13-07-2026.md  15-06-2026.md  22-06-2026.md  29-06-2026.md
.claude/skills/session-end/: SKILL.md
.claude/skills/session-start/: SKILL.md
app/repl/: main.c
docs/: architecture.md  requirements.md
docs/assets/: birds-eye-view.drawio
docs/decisions/: 0001-account-store-design.md  0002-account-struct-clarification.md
include/xlcore/: account.h  datatypes.h  errors.h
src/: CMakeLists.txt
src/storage/: CMakeLists.txt  storage.h
src/xlcore/: CMakeLists.txt  account.c  datatypes.c  errors.c
src/xlcore/memory/: account-arena.c  account-arena.h  arena-lookup-table.c  arena-lookup-table.h  arena.c  arena.h  base-arena.c  base-arena.h
src/xlcore/memory/internal/: arena_helpers.h
tests/: CMakeLists.txt  debug_settings.h
tests/internal/: arena.c  arena.h  arena_tests.c  lookup-table.c  lookup-table.h  main.c
